2005-02-10 Alain Magloire
	Second of 79596
	* model/org/eclipse/cdt/core/model/IPathEntryContainerExtension.java
	* model/org/eclipse/cdt/core/model/IPathEntryContainerExtensionListener.java
	* model/org/eclipse/cdt/core/model/PathEntryContainerChanged.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java

2005-02-10 Alain Magloire
	Part of the fix for 79596
	* model/org/eclipse/cdt/core/model/CoreModel.java
	* model/org/eclipse/cdt/core/model/IPathEntry.java
	* model/org/eclipse/cdt/core/model/IPathEntryContainerExtension.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
	* src/org/eclipse/cdt/core/resources/ScannerProvider.java

2005-01-29 Alain Magloire
	Copy the spaces and Newlines.
	* model/org/eclipse/cdt/internal/core/model/CopylementsOperation.java
	* model/org/eclipse/cdt/internal/core/model/DeleteElementsOperation.java

2005-01-28 Alain Magloire
	Operation on translationUnit
	* model/org/eclipse/cdt/core/model/ITranslationUnit.java
	* model/org/eclipse/cdt/internal/core/model/CreateIncludeOperation.java
	* model/org/eclipse/cdt/internal/core/model/CreateNamespaceOperation.java
	* model/org/eclipse/cdt/internal/core/model/CreateUsingOperation.java
	* model/org/eclipse/cdt/internal/core/model/TranslationUnit.java

2005-01-26 Alain Magloire
	The line and offset information should be cache in the SourceManipulationInfo
	* model/org/eclipse/cdt/iternal/core/BinaryElement.java
	* model/org/eclipse/cdt/iternal/core/CElement.java
	* model/org/eclipse/cdt/iternal/core/CModelBuilder.java
	* model/org/eclipse/cdt/iternal/core/Namespace.java
	* model/org/eclipse/cdt/iternal/core/SourceManipulation.java
	* model/org/eclipse/cdt/iternal/core/SourceManipulationInfo.java

2005-01-22 Alain Magloire
	PR 38958
	Part implementation of the CreateXXXOperation classes.
	* model/org/eclipse/cdt/core/model/ICElement.java
	* model/org/eclipse/cdt/core/model/IStructure.java
	* model/org/eclipse/cdt/core/model/IStructureDeclaration.java